# sanic-pastebin

./: .dockerignore  .env-docker  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  server.py
backend/db/: db.py
backend/pastes/: dependencies.py  model.py  object_storage.py  repository.py  router.py  schema.py  service.py
backend/storage/: redis.py  repository.py  s3.py
backend/users/: dependencies.py  model.py  repository.py  router.py  schema.py  service.py  token_storage.py
backend/utils/: uri_generator.py  vars.py
backend/utils/auth/: password.py  token.py
frontend/: Dockerfile  app.js  index.html  paste.html  router.py
frontend/static/: styles.css
templates/: base.html  main.html  paste.html
